added hdi syntax to package.json

--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   },
   "scripts": {
     "start": "cds run"
-  }
+  },
+  "cds": {
+        "hana": {
+            "syntax": "hdi"
+        }
+    }
 }
