Authenticated version with DB and SRV

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 _out
 *.db
 connection.properties
-#### default-*.json
+default-*.json
 gen/
 node_modules/
 target/
@@ -27,3 +27,9 @@ mta_archives/
 # IDEs
 # .vscode
 # .idea
+
+# added by cds deploy
+default-env.json
+
+# auto generated wildcard
+cap-testing/.env
